Results: Fix scroll snapping on mobile (and Firefox)
For mobile, we want the snapping x to be mandatory. However, that breaks scroll-y on Firefox which requires proximity. This is something tailwind does not allow right now, so we use some custom css here.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,10 @@
     @apply text-slate-800;
   }
 }
+
+@layer components {
+  .snap-x-not-y {
+    scroll-snap-type: x mandatory;
+    scroll-snap-type: y proximity;
+  }
+}
